--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "jest": "^25.1.0",
     "jest-enzyme": "^7.1.2",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
